--- a/src/css/style.css
+++ b/src/css/style.css
@@ -139,12 +139,12 @@ hr {
         margin-left: 23px; } }
 
 .cart {
-  position: absolute;
+  position: fixed;
   z-index: 100;
   top: 0px;
   left: 0px;
   width: 100%;
-  height: 100%; }
+  height: 100vh; }
   .cart .modal {
     background-color: white;
     z-index: 10;
@@ -158,15 +158,57 @@ hr {
     height: 678px;
     margin: auto;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.17); }
+    @media (max-width: 1023px) {
+      .cart .modal {
+        font-size: 12px; } }
+    @media (max-width: 767px) {
+      .cart .modal {
+        border-radius: 0px;
+        margin: 0px;
+        font-size: 12px;
+        width: 100%;
+        height: 100%; } }
+    .cart .modal .hidden {
+      display: none; }
     .cart .modal .close {
       position: absolute;
       top: 30px;
       right: 30px; }
+      @media (max-width: 767px) {
+        .cart .modal .close {
+          top: 20px;
+          right: 20px; }
+          .cart .modal .close img {
+            width: 20px;
+            height: 20px; } }
+    .cart .modal button.checkout {
+      border-radius: 0px;
+      font-size: 14px;
+      width: 100%;
+      height: 44px;
+      color: #fff;
+      text-transform: uppercase;
+      background-color: #5E97D1;
+      position: absolute;
+      bottom: 0px; }
     .cart .modal .modal-content {
       margin: 68px 80px; }
+      @media (max-width: 1023px) {
+        .cart .modal .modal-content {
+          font-size: 12px; } }
+      @media (max-width: 767px) {
+        .cart .modal .modal-content {
+          margin: 48px 17px; } }
       .cart .modal .modal-content h3 {
         font-size: 38px;
         margin-bottom: 20px; }
+        @media (max-width: 767px) {
+          .cart .modal .modal-content h3 {
+            font-size: 28px; } }
+      .cart .modal .modal-content hr {
+        margin-bottom: 17px; }
+      .cart .modal .modal-content .product-list {
+        margin-top: 17px; }
       .cart .modal .modal-content .no-items {
         text-align: center;
         width: 250px;
@@ -178,16 +220,92 @@ hr {
         .cart .modal .modal-content .no-items em {
           color: #919191;
           font-size: 21px; }
+      .cart .modal .modal-content .total-item {
+        margin-bottom: 17px; }
+      .cart .modal .modal-content span {
+        font-size: 20px; }
+        @media (max-width: 1023px) {
+          .cart .modal .modal-content span {
+            font-size: 18px; } }
+        @media (max-width: 767px) {
+          .cart .modal .modal-content span {
+            font-size: 14px; } }
+      .cart .modal .modal-content .label {
+        color: #9D9D9D; }
+      .cart .modal .modal-content .value {
+        color: black;
+        float: right; }
+      .cart .modal .modal-content .value::before {
+        content: "$"; }
   .cart .overlay {
     background-color: rgba(242, 244, 247, 0.9);
     width: 100%;
-    height: 100%; }
+    height: 100vh; }
 
 .cart-open {
   display: block; }
 
 .cart-closed {
   display: none; }
+
+.cart-item {
+  margin-bottom: 40px;
+  clear: both; }
+  .cart-item .productImage {
+    background-size: cover;
+    background-position: center;
+    float: left !important;
+    margin: 0px 20px 0px 0px;
+    width: 200px;
+    height: 100px; }
+    @media (max-width: 1023px) {
+      .cart-item .productImage {
+        width: 150px;
+        height: 90px; } }
+    @media (max-width: 767px) {
+      .cart-item .productImage {
+        width: 107px;
+        height: 78px;
+        margin: 0px 14px 0px 0px; } }
+  .cart-item p.title {
+    display: inline;
+    font-size: 28px; }
+    @media (max-width: 1023px) {
+      .cart-item p.title {
+        font-size: 22px; } }
+    @media (max-width: 767px) {
+      .cart-item p.title {
+        font-size: 16px; } }
+  .cart-item p.price {
+    float: right !important;
+    margin-top: 0px;
+    font-size: 28px; }
+    @media (max-width: 1023px) {
+      .cart-item p.price {
+        margin-top: 3px;
+        font-size: 22px; } }
+    @media (max-width: 767px) {
+      .cart-item p.price {
+        font-size: 14px; } }
+  .cart-item p.inventory {
+    font-size: 13px;
+    margin-top: 20px;
+    color: #939393; }
+    @media (max-width: 1023px) {
+      .cart-item p.inventory {
+        font-size: 12px; } }
+    @media (max-width: 767px) {
+      .cart-item p.inventory {
+        margin-top: 9px;
+        font-size: 12px; } }
+  .cart-item button {
+    color: #CC1D39;
+    text-transform: uppercase;
+    font-size: 14px;
+    padding: 0px;
+    position: relative;
+    bottom: 0px;
+    border: 0px; }
 
 html body {
   background-color: #F4F5F7; }
