lock scrolling on page when cart is up

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -308,4 +308,8 @@ hr {
     border: 0px; }
 
 html body {
-  background-color: #F4F5F7; }
+  background-color: #F4F5F7;
+  overflow: visible; }
+
+html body.cart-open {
+  overflow: hidden; }
