--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -10,5 +10,10 @@
 html {
 	body {
 		background-color: $color-page-background;
+		overflow: visible;
+	}
+
+	body.cart-open {
+		overflow: hidden;
 	}
 }
